--- a/index.html
+++ b/index.html
@@ -79,26 +79,27 @@
                     <section class="modal">
                         <div class="modal__container">
                             <h2 class="modal__title">Política de Privacidad para Espacio & Mercadeo</h2>
-                            <p class="modal__paragraph"> Recopilación de Datos:
+                            <p class="modal__paragraph"> 
+                                1. Recopilación de Datos:
                                 Recopilamos datos personales de manera legal y transparente, con el consentimiento del individuo.
                                 Los datos pueden incluir nombre, documento de identidad, dirección y otros detalles relevantes.
 
                                 <br>
-                                1. Uso de Datos:
-                                - Utilizamos los datos para los fines específicos para los que fueron proporcionados.
+                                2. Uso de Datos:
+                                Utilizamos los datos para los fines específicos para los que fueron proporcionados.
                                 Esto incluye la prestación de servicios, gestión de clientes y cumplimiento legal.
 
                                 <br>
-                                2. Protección de Datos:
-                                - Adoptamos medidas de seguridad para proteger los datos contra acceso no autorizado o uso indebido.
+                                3. Protección de Datos:
+                                Adoptamos medidas de seguridad para proteger los datos contra acceso no autorizado o uso indebido.
 
                                 <br>
-                                3. Derechos de los Individuos:
-                                - Respetamos los derechos de acceso, rectificación y eliminación de datos personales.
+                                4. Derechos de los Individuos:
+                                Respetamos los derechos de acceso, rectificación y eliminación de datos personales.
 
                                 <br>
-                                4. Divulgación de Datos:
-                                - No compartimos datos con terceros sin consentimiento, a menos que la ley lo exija.
+                                5. Divulgación de Datos:
+                                No compartimos datos con terceros sin consentimiento, a menos que la ley lo exija.
                                 
                                 <br>
                                 Fecha de última actualización: 27/03/2024
